force-app/main/default/objects/Litmos__RecommendedFieldValue__c/Litmos__RecommendedFieldValue__c.object-meta.xml
<CustomObject>
    <label>Recommended Field Value</label>
    <nameField>
        <label>RecommendedFieldValue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recommended Field Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>