force-app/main/default/objects/Litmos__RecommendedFieldValue__c/fields/Litmos__FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>Litmos__FieldApiName__c</fullName>
    <label>FieldApiName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>