force-app/main/default/objects/Litmos__RecommendedFieldValue__c/fields/Litmos__FieldName__c.field-meta.xml
<CustomField>
    <fullName>Litmos__FieldName__c</fullName>
    <label>FieldName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>