force-app/main/default/objects/Litmos__RecommendedFieldValue__c/fields/Litmos__FieldType__c.field-meta.xml
<CustomField>
    <fullName>Litmos__FieldType__c</fullName>
    <label>FieldType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decimal</fullName>
                <default>true</default>
                <label>Decimal</label>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>