force-app/main/default/objects/Litmos__RecommendedFieldValue__c/fields/Litmos__RecordAssignmentId__c.field-meta.xml
<CustomField>
    <fullName>Litmos__RecordAssignmentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Record Assignment</label>
    <referenceTo>Litmos__Record_Assignment__c</referenceTo>
    <relationshipName>RecommendedFieldValues</relationshipName>
    <type>Lookup</type>
</CustomField>