force-app/main/default/objects/Litmos__RecommendedFieldValue__c/listViews/Litmos__All.listView-meta.xml
<ListView>
    <fullName>Litmos__All</fullName>
    <columns>NAME</columns>
    <columns>Litmos__FieldName__c</columns>
    <columns>Litmos__FieldType__c</columns>
    <columns>Litmos__RecordAssignmentId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>